--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx", ".storybook/**/*.ts"],
   "exclude": ["node_modules"]
 }
