--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "paths": {
       "@Components/*": ["./src/components/*"],
       "@Styles/*": ["./src/styles/*"],
-      "@Assets/*": ["./src/public/assets/*"]
+      "@Assets/*": ["./src/public/assets/*"],
+      "@Constants/*": ["./src/constants/*"]
     },
     "typeRoots": ["node_modules/@types", "src/types"],
     "plugins": [
