(add) 클라우드 사용자 관리 페이지 및 관련 컴포넌트 추가 [FRONTEND-2]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": "src",
     "paths": {
-      "@Components/*": ["./src/components/*"],
-      "@Styles/*": ["./src/styles/*"],
-      "@Assets/*": ["./src/public/assets/*"],
-      "@Constants/*": ["./src/constants/*"]
+      "@Components/*": ["./components/*"],
+      "@Styles/*": ["./styles/*"],
+      "@Assets/*": ["./public/assets/*"],
+      "@Constants/*": ["./constants/*"]
     },
     "typeRoots": ["node_modules/@types", "src/types"],
     "plugins": [
@@ -26,6 +27,13 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx", ".storybook/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "postcss.config.mjs",
+    ".storybook/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
