--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.84.2",
+    "axios": "^1.11.0",
     "next": "^15.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
@@ -32,6 +34,8 @@
     "@storybook/experimental-addon-test": "^8.6.14",
     "@storybook/nextjs-vite": "^9.1.1",
     "@storybook/react": "^9.1.1",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
