(add) 클라우드 목록을 위한 React Query 클라이언트 및 서버 서비스 추가 [FRONTEND-2]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
       "@Components/*": ["./components/*"],
       "@Styles/*": ["./styles/*"],
       "@Assets/*": ["./public/assets/*"],
-      "@Constants/*": ["./constants/*"]
+      "@Constants/*": ["./constants/*"],
+      "@DataTypes/*": ["./types/*"]
     },
-    "typeRoots": ["node_modules/@types", "src/types"],
     "plugins": [
       {
         "name": "next"
