--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
+    "motion": "^12.23.12",
     "next": "^15.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
